113-2-NCKU-CompilerHW3/y.output
Terminals unused in grammar

    FOR
    LOOP
    RETURN
    BREAK
    IN
    DOTDOT


Grammar

    0 $accept: Program $end

    1 $@1: ε

    2 Program: $@1 GlobalStatementList

    3 GlobalStatementList: GlobalStatementList GlobalStatement
    4                    | GlobalStatement

    5 GlobalStatement: FunctionDeclStmt
    6                | NEWLINE

    7 $@2: ε

    8 FunctionDeclStmt: FUNC ID '(' FunctionArguments ')' ArrowType $@2 Block

    9 StmtList: StmtList Stmt
   10         | ε

   11 Stmt: PrintStmt
   12     | DeclarationStmt
   13     | AssignmentStmt
   14     | Block
   15     | IfStmt
   16     | WhileStmt

   17 $@3: ε

   18 Block: '{' $@3 StmtList '}'

   19 Expr: ID
   20     | INT_LIT
   21     | FLOAT_LIT
   22     | '"' STRING_LIT '"'
   23     | '"' '"'
   24     | TRUE
   25     | FALSE
   26     | '[' ArrayElements ']'
   27     | ID '[' INT_LIT ']'
   28     | '-' Expr
   29     | '!' Expr
   30     | '(' Expr ')'
   31     | Expr '*' Expr
   32     | Expr '/' Expr
   33     | Expr '%' Expr
   34     | Expr '+' Expr
   35     | Expr '-' Expr
   36     | Expr LSHIFT Expr
   37     | Expr RSHIFT Expr
   38     | Expr LAND Expr
   39     | Expr LOR Expr
   40     | Expr GEQ Expr
   41     | Expr LEQ Expr
   42     | Expr EQL Expr
   43     | Expr NEQ Expr
   44     | Expr '>' Expr
   45     | Expr '<' Expr
   46     | Expr AS Type

   47 ArrayElements: ArrayElements ',' Expr
   48              | Expr

   49 $@4: ε

   50 PrintStmt: PrintType $@4 '(' Expr ')' ';'

   51 DeclarationStmt: LET MutType ID ':' Type '=' Expr ';'
   52                | LET MutType ID ':' Type ';'
   53                | LET MutType ID '=' Expr ';'

   54 AssignmentStmt: ID AssignmentOperatorType Expr ';'

   55 IfStmt: IF Expr Block
   56       | IF Expr Block ELSE Block

   57 WhileStmt: WHILE Expr Block

   58 Type: INT
   59     | FLOAT
   60     | BOOL
   61     | '&' STR
   62     | '[' Type ';' Expr ']'
   63     | ε

   64 PrintType: PRINT
   65          | PRINTLN

   66 MutType: MUT
   67        | ε

   68 AssignmentOperatorType: '='
   69                       | ADD_ASSIGN
   70                       | SUB_ASSIGN
   71                       | MUL_ASSIGN
   72                       | DIV_ASSIGN
   73                       | REM_ASSIGN

   74 FunctionArguments: FunctionArguments ',' Type ID
   75                  | Type ID
   76                  | ε

   77 ArrowType: ARROW Type
   78          | ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 29
    '"' (34) 22 23
    '%' (37) 33
    '&' (38) 61
    '(' (40) 8 30 50
    ')' (41) 8 30 50
    '*' (42) 31
    '+' (43) 34
    ',' (44) 47 74
    '-' (45) 28 35
    '/' (47) 32
    ':' (58) 51 52
    ';' (59) 50 51 52 53 54 62
    '<' (60) 45
    '=' (61) 51 53 68
    '>' (62) 44
    '[' (91) 26 27 62
    ']' (93) 26 27 62
    '{' (123) 18
    '}' (125) 18
    error (256)
    LET (258) 51 52 53
    MUT (259) 66
    NEWLINE (260) 6
    INT (261) 58
    FLOAT (262) 59
    BOOL (263) 60
    STR (264) 61
    TRUE (265) 24
    FALSE (266) 25
    GEQ (267) 40
    LEQ (268) 41
    EQL (269) 42
    NEQ (270) 43
    LOR (271) 39
    LAND (272) 38
    ADD_ASSIGN (273) 69
    SUB_ASSIGN (274) 70
    MUL_ASSIGN (275) 71
    DIV_ASSIGN (276) 72
    REM_ASSIGN (277) 73
    IF (278) 55 56
    ELSE (279) 56
    FOR (280)
    WHILE (281) 57
    LOOP (282)
    PRINT (283) 64
    PRINTLN (284) 65
    FUNC (285) 8
    RETURN (286)
    BREAK (287)
    ARROW (288) 77
    AS (289) 46
    IN (290)
    DOTDOT (291)
    RSHIFT (292) 37
    LSHIFT (293) 36
    INT_LIT <i_val> (294) 20 27
    FLOAT_LIT <f_val> (295) 21
    STRING_LIT <s_val> (296) 22
    ID <s_val> (297) 8 19 27 51 52 53 54 74 75
    IFX (298)
    UMINUS (299)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    Program (66)
        on left: 2
        on right: 0
    $@1 (67)
        on left: 1
        on right: 2
    GlobalStatementList (68)
        on left: 3 4
        on right: 2 3
    GlobalStatement (69)
        on left: 5 6
        on right: 3 4
    FunctionDeclStmt (70)
        on left: 8
        on right: 5
    $@2 (71)
        on left: 7
        on right: 8
    StmtList (72)
        on left: 9 10
        on right: 9 18
    Stmt (73)
        on left: 11 12 13 14 15 16
        on right: 9
    Block (74)
        on left: 18
        on right: 8 14 55 56 57
    $@3 (75)
        on left: 17
        on right: 18
    Expr <s_val> (76)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 50 51 53 54 55 56 57 62
    ArrayElements <s_val> (77)
        on left: 47 48
        on right: 26 47
    PrintStmt (78)
        on left: 50
        on right: 11
    $@4 (79)
        on left: 49
        on right: 50
    DeclarationStmt (80)
        on left: 51 52 53
        on right: 12
    AssignmentStmt (81)
        on left: 54
        on right: 13
    IfStmt (82)
        on left: 55 56
        on right: 15
    WhileStmt (83)
        on left: 57
        on right: 16
    Type <s_val> (84)
        on left: 58 59 60 61 62 63
        on right: 46 51 52 62 74 75 77
    PrintType <s_val> (85)
        on left: 64 65
        on right: 50
    MutType <i_val> (86)
        on left: 66 67
        on right: 51 52 53
    AssignmentOperatorType <s_val> (87)
        on left: 68 69 70 71 72 73
        on right: 54
    FunctionArguments <s_val> (88)
        on left: 74 75 76
        on right: 8 74
    ArrowType <s_val> (89)
        on left: 77 78
        on right: 8


State 0

    0 $accept: • Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 • GlobalStatementList

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5

    GlobalStatementList  go to state 6
    GlobalStatement      go to state 7
    FunctionDeclStmt     go to state 8


State 3

    0 $accept: Program $end •

    $default  accept


State 4

    6 GlobalStatement: NEWLINE •

    $default  reduce using rule 6 (GlobalStatement)


State 5

    8 FunctionDeclStmt: FUNC • ID '(' FunctionArguments ')' ArrowType $@2 Block

    ID  shift, and go to state 9


State 6

    2 Program: $@1 GlobalStatementList •
    3 GlobalStatementList: GlobalStatementList • GlobalStatement

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5

    $default  reduce using rule 2 (Program)

    GlobalStatement   go to state 10
    FunctionDeclStmt  go to state 8


State 7

    4 GlobalStatementList: GlobalStatement •

    $default  reduce using rule 4 (GlobalStatementList)


State 8

    5 GlobalStatement: FunctionDeclStmt •

    $default  reduce using rule 5 (GlobalStatement)


State 9

    8 FunctionDeclStmt: FUNC ID • '(' FunctionArguments ')' ArrowType $@2 Block

    '('  shift, and go to state 11


State 10

    3 GlobalStatementList: GlobalStatementList GlobalStatement •

    $default  reduce using rule 3 (GlobalStatementList)


State 11

    8 FunctionDeclStmt: FUNC ID '(' • FunctionArguments ')' ArrowType $@2 Block

    INT    shift, and go to state 12
    FLOAT  shift, and go to state 13
    BOOL   shift, and go to state 14
    '['    shift, and go to state 15
    '&'    shift, and go to state 16

    ID        reduce using rule 63 (Type)
    $default  reduce using rule 76 (FunctionArguments)

    Type               go to state 17
    FunctionArguments  go to state 18


State 12

   58 Type: INT •

    $default  reduce using rule 58 (Type)


State 13

   59 Type: FLOAT •

    $default  reduce using rule 59 (Type)


State 14

   60 Type: BOOL •

    $default  reduce using rule 60 (Type)


State 15

   62 Type: '[' • Type ';' Expr ']'

    INT    shift, and go to state 12
    FLOAT  shift, and go to state 13
    BOOL   shift, and go to state 14
    '['    shift, and go to state 15
    '&'    shift, and go to state 16

    $default  reduce using rule 63 (Type)

    Type  go to state 19


State 16

   61 Type: '&' • STR

    STR  shift, and go to state 20


State 17

   75 FunctionArguments: Type • ID

    ID  shift, and go to state 21


State 18

    8 FunctionDeclStmt: FUNC ID '(' FunctionArguments • ')' ArrowType $@2 Block
   74 FunctionArguments: FunctionArguments • ',' Type ID

    ')'  shift, and go to state 22
    ','  shift, and go to state 23


State 19

   62 Type: '[' Type • ';' Expr ']'

    ';'  shift, and go to state 24


State 20

   61 Type: '&' STR •

    $default  reduce using rule 61 (Type)


State 21

   75 FunctionArguments: Type ID •

    $default  reduce using rule 75 (FunctionArguments)


State 22

    8 FunctionDeclStmt: FUNC ID '(' FunctionArguments ')' • ArrowType $@2 Block

    ARROW  shift, and go to state 25

    $default  reduce using rule 78 (ArrowType)

    ArrowType  go to state 26


State 23

   74 FunctionArguments: FunctionArguments ',' • Type ID

    INT    shift, and go to state 12
    FLOAT  shift, and go to state 13
    BOOL   shift, and go to state 14
    '['    shift, and go to state 15
    '&'    shift, and go to state 16

    $default  reduce using rule 63 (Type)

    Type  go to state 27


State 24

   62 Type: '[' Type ';' • Expr ']'

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 38


State 25

   77 ArrowType: ARROW • Type

    INT    shift, and go to state 12
    FLOAT  shift, and go to state 13
    BOOL   shift, and go to state 14
    '['    shift, and go to state 15
    '&'    shift, and go to state 16

    $default  reduce using rule 63 (Type)

    Type  go to state 39


State 26

    8 FunctionDeclStmt: FUNC ID '(' FunctionArguments ')' ArrowType • $@2 Block

    $default  reduce using rule 7 ($@2)

    $@2  go to state 40


State 27

   74 FunctionArguments: FunctionArguments ',' Type • ID

    ID  shift, and go to state 41


State 28

   24 Expr: TRUE •

    $default  reduce using rule 24 (Expr)


State 29

   25 Expr: FALSE •

    $default  reduce using rule 25 (Expr)


State 30

   20 Expr: INT_LIT •

    $default  reduce using rule 20 (Expr)


State 31

   21 Expr: FLOAT_LIT •

    $default  reduce using rule 21 (Expr)


State 32

   19 Expr: ID •
   27     | ID • '[' INT_LIT ']'

    '['  shift, and go to state 42

    $default  reduce using rule 19 (Expr)


State 33

   29 Expr: '!' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 43


State 34

   28 Expr: '-' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 44


State 35

   30 Expr: '(' • Expr ')'

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 45


State 36

   22 Expr: '"' • STRING_LIT '"'
   23     | '"' • '"'

    STRING_LIT  shift, and go to state 46
    '"'         shift, and go to state 47


State 37

   26 Expr: '[' • ArrayElements ']'

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr           go to state 48
    ArrayElements  go to state 49


State 38

   31 Expr: Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type
   62 Type: '[' Type ';' Expr • ']'

    GEQ     shift, and go to state 50
    LEQ     shift, and go to state 51
    EQL     shift, and go to state 52
    NEQ     shift, and go to state 53
    LOR     shift, and go to state 54
    LAND    shift, and go to state 55
    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '>'     shift, and go to state 59
    '<'     shift, and go to state 60
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65
    ']'     shift, and go to state 66


State 39

   77 ArrowType: ARROW Type •

    $default  reduce using rule 77 (ArrowType)


State 40

    8 FunctionDeclStmt: FUNC ID '(' FunctionArguments ')' ArrowType $@2 • Block

    '{'  shift, and go to state 67

    Block  go to state 68


State 41

   74 FunctionArguments: FunctionArguments ',' Type ID •

    $default  reduce using rule 74 (FunctionArguments)


State 42

   27 Expr: ID '[' • INT_LIT ']'

    INT_LIT  shift, and go to state 69


State 43

   29 Expr: '!' Expr •
   31     | Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    GEQ     shift, and go to state 50
    LEQ     shift, and go to state 51
    EQL     shift, and go to state 52
    NEQ     shift, and go to state 53
    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '>'     shift, and go to state 59
    '<'     shift, and go to state 60
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65

    $default  reduce using rule 29 (Expr)


State 44

   28 Expr: '-' Expr •
   31     | Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    AS  shift, and go to state 56

    $default  reduce using rule 28 (Expr)


State 45

   30 Expr: '(' Expr • ')'
   31     | Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    GEQ     shift, and go to state 50
    LEQ     shift, and go to state 51
    EQL     shift, and go to state 52
    NEQ     shift, and go to state 53
    LOR     shift, and go to state 54
    LAND    shift, and go to state 55
    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '>'     shift, and go to state 59
    '<'     shift, and go to state 60
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65
    ')'     shift, and go to state 70


State 46

   22 Expr: '"' STRING_LIT • '"'

    '"'  shift, and go to state 71


State 47

   23 Expr: '"' '"' •

    $default  reduce using rule 23 (Expr)


State 48

   31 Expr: Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type
   48 ArrayElements: Expr •

    GEQ     shift, and go to state 50
    LEQ     shift, and go to state 51
    EQL     shift, and go to state 52
    NEQ     shift, and go to state 53
    LOR     shift, and go to state 54
    LAND    shift, and go to state 55
    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '>'     shift, and go to state 59
    '<'     shift, and go to state 60
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65

    $default  reduce using rule 48 (ArrayElements)


State 49

   26 Expr: '[' ArrayElements • ']'
   47 ArrayElements: ArrayElements • ',' Expr

    ']'  shift, and go to state 72
    ','  shift, and go to state 73


State 50

   40 Expr: Expr GEQ • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 74


State 51

   41 Expr: Expr LEQ • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 75


State 52

   42 Expr: Expr EQL • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 76


State 53

   43 Expr: Expr NEQ • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 77


State 54

   39 Expr: Expr LOR • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 78


State 55

   38 Expr: Expr LAND • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 79


State 56

   46 Expr: Expr AS • Type

    INT    shift, and go to state 12
    FLOAT  shift, and go to state 13
    BOOL   shift, and go to state 14
    '['    shift, and go to state 15
    '&'    shift, and go to state 16

    $default  reduce using rule 63 (Type)

    Type  go to state 80


State 57

   37 Expr: Expr RSHIFT • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 81


State 58

   36 Expr: Expr LSHIFT • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 82


State 59

   44 Expr: Expr '>' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 83


State 60

   45 Expr: Expr '<' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 84


State 61

   34 Expr: Expr '+' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 85


State 62

   35 Expr: Expr '-' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 86


State 63

   31 Expr: Expr '*' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 87


State 64

   32 Expr: Expr '/' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 88


State 65

   33 Expr: Expr '%' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 89


State 66

   62 Type: '[' Type ';' Expr ']' •

    $default  reduce using rule 62 (Type)


State 67

   18 Block: '{' • $@3 StmtList '}'

    $default  reduce using rule 17 ($@3)

    $@3  go to state 90


State 68

    8 FunctionDeclStmt: FUNC ID '(' FunctionArguments ')' ArrowType $@2 Block •

    $default  reduce using rule 8 (FunctionDeclStmt)


State 69

   27 Expr: ID '[' INT_LIT • ']'

    ']'  shift, and go to state 91


State 70

   30 Expr: '(' Expr ')' •

    $default  reduce using rule 30 (Expr)


State 71

   22 Expr: '"' STRING_LIT '"' •

    $default  reduce using rule 22 (Expr)


State 72

   26 Expr: '[' ArrayElements ']' •

    $default  reduce using rule 26 (Expr)


State 73

   47 ArrayElements: ArrayElements ',' • Expr

    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29
    INT_LIT    shift, and go to state 30
    FLOAT_LIT  shift, and go to state 31
    ID         shift, and go to state 32
    '!'        shift, and go to state 33
    '-'        shift, and go to state 34
    '('        shift, and go to state 35
    '"'        shift, and go to state 36
    '['        shift, and go to state 37

    Expr  go to state 92


State 74

   31 Expr: Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   40     | Expr GEQ Expr •
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65

    GEQ  error (nonassociative)
    LEQ  error (nonassociative)
    EQL  error (nonassociative)
    NEQ  error (nonassociative)
    '>'  error (nonassociative)
    '<'  error (nonassociative)

    $default  reduce using rule 40 (Expr)


State 75

   31 Expr: Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   41     | Expr LEQ Expr •
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65

    GEQ  error (nonassociative)
    LEQ  error (nonassociative)
    EQL  error (nonassociative)
    NEQ  error (nonassociative)
    '>'  error (nonassociative)
    '<'  error (nonassociative)

    $default  reduce using rule 41 (Expr)


State 76

   31 Expr: Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   42     | Expr EQL Expr •
   43     | Expr • NEQ Expr
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65

    GEQ  error (nonassociative)
    LEQ  error (nonassociative)
    EQL  error (nonassociative)
    NEQ  error (nonassociative)
    '>'  error (nonassociative)
    '<'  error (nonassociative)

    $default  reduce using rule 42 (Expr)


State 77

   31 Expr: Expr • '*' Expr
   32     | Expr • '/' Expr
   33     | Expr • '%' Expr
   34     | Expr • '+' Expr
   35     | Expr • '-' Expr
   36     | Expr • LSHIFT Expr
   37     | Expr • RSHIFT Expr
   38     | Expr • LAND Expr
   39     | Expr • LOR Expr
   40     | Expr • GEQ Expr
   41     | Expr • LEQ Expr
   42     | Expr • EQL Expr
   43     | Expr • NEQ Expr
   43     | Expr NEQ Expr •
   44     | Expr • '>' Expr
   45     | Expr • '<' Expr
   46     | Expr • AS Type

    AS      shift, and go to state 56
    RSHIFT  shift, and go to state 57
    LSHIFT  shift, and go to state 58
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65

    GEQ  error (nonassociative)
    LEQ  error (nonassociative)
    EQL  error (nonassociative)
    NEQ  error (nonassociative)
    '>'  error (nonassociative)
    '<'  error (nonassociative)

    $default  reduce using rule 43 (Expr)


State 78
